Add Services page

--- a/aboutus.html
+++ b/aboutus.html
@@ -68,14 +68,15 @@
               </li>
 
               <li>
-                <a href="./aboutus.html" class="dropdown-link menu-link"
-                  >About</a
-                >
+                <a href="./aboutus.html" class="dropdown-link menu-link">About</a>
                 <div class="dropdown-content">
                   <a href="#choose" class="sublink">Choose Us</a>
                   <a href="#quality" class="sublink">Qualities</a>
                   <a href="#team" class="sublink">Our Team</a>
                 </div>
+              </li>
+              <li>
+                <a href="./services.html" class="menu-link">Services</a>
               </li>
               <li>
                 <a href="./projects.html" class="menu-link">Projects</a>
