--- a/careers.html
+++ b/careers.html
@@ -71,6 +71,9 @@
                 <a href="./aboutus.html" class="menu-link">About</a>
               </li>
               <li>
+                <a href="./services.html" class="menu-link">Services</a>
+              </li>
+              <li>
                 <a href="./projects.html" class="menu-link">Projects</a>
               </li>
               <li>
