--- a/index.html
+++ b/index.html
@@ -69,9 +69,11 @@
               </li>
 
               <li>
-                <a href="./aboutus.html" class="menu-link"
-                  >About</a
+                <a href="./aboutus.html" class="menu-link">About</a
                 >
+              </li>
+              <li>
+                <a href="./services.html" class="menu-link">Services</a>
               </li>
               <li>
                 <a href="./projects.html" class="menu-link"
@@ -121,28 +123,33 @@
     </div>
 
     <div class="container grid grid--2-cols">
-      <div class=" center margin-top--sm">
-        <img src="./images/server.png" alt="Server Logo">
-        <h2 class="h2-color">Server and Storage System</h2>
-      </div>
-
       <div class="center margin-top--sm">
-        <img src="./images/IT-services.png" alt="IT-Services Logo">
-        <h2 class="h2-color">IT Services</h2>
+        <a class="services-link" href="#">
+              <ion-icon class="social-icon" name="globe-outline"></ion-icon>
+              <h2 class="h2-color">Web</h2>
+        </a>
       </div>
-
       <div class="center margin-top--sm">
-        <img src="./images/security.png" alt="Security Logo">
-        <h2 class="h2-color">Security Services</h2>
+        <a class="services-link" href="#">
+          <ion-icon class="social-icon" name="phone-portrait-outline"></ion-icon>
+          <h2 class="h2-color">Mobile</h2>
+        </a>
       </div>
-
       <div class="center margin-top--sm">
-        <img src="./images/cloud.png" alt="Cloud Logo">
-        <h2 class="h2-color">Cloud Services</h2>
+        <a class="services-link" href="#">
+          <ion-icon class="social-icon" name="server-outline"></ion-icon>
+          <h2 class="h2-color">Database</h2>
+        </a>
+      </div>
+      <div class="center margin-top--sm">
+        <a class="services-link" href="#">
+          <ion-icon class="social-icon" name="cloud-upload-outline"></ion-icon>
+          <h2 class="h2-color">Web Services</h2>
+        </a>
       </div>
     </div>
     <div class="center">
-      <a href="#" class="servicesExploreMore">Explore more</a>
+      <a href="./services.html" class="servicesExploreMore">Explore more</a>
     </div>
   </section>
   <!-- Service Ends here -->
