--- a/projects.html
+++ b/projects.html
@@ -71,9 +71,10 @@
                 <a href="./aboutus.html" class="menu-link">About</a>
               </li>
               <li>
-                <a href="./projects.html" class="dropdown-link menu-link"
-                  >Projects</a
-                >
+                <a href="./services.html" class="menu-link">Services</a>
+              </li>
+              <li>
+                <a href="./projects.html" class="dropdown-link menu-link">Projects</a>
               </li>
               <li>
                 <a href="./contactus.html" class="menu-link">Contact</a>
