--- a/careers.html
+++ b/careers.html
@@ -56,8 +56,8 @@
     <header class="header header-aboutus">
       <div class="nav-header-container">
         <div class="nav-header">
-          <a href="#">
-            <img src="./images/logo-new.PNG" alt="logo" class="logo" />
+          <a href="index.html">
+            <img src="./images/logo.PNG" alt="logo" class="logo" />
           </a>
 
           <!-- Navigation -->
