--- a/projects.html
+++ b/projects.html
@@ -56,8 +56,8 @@
     <header class="header header-aboutus">
       <div class="nav-header-container">
         <div class="nav-header">
-          <a href="#">
-            <img src="./images/logo-new.PNG" alt="logo" class="logo" />
+          <a href="index.html">
+            <img src="./images/logo.PNG" alt="logo" class="logo" />
           </a>
 
           <!-- Navigation -->
@@ -74,7 +74,9 @@
                 <a href="./services.html" class="menu-link">Services</a>
               </li>
               <li>
-                <a href="./projects.html" class="dropdown-link menu-link">Projects</a>
+                <a href="./projects.html" class="dropdown-link menu-link"
+                  >Projects</a
+                >
               </li>
               <li>
                 <a href="./contactus.html" class="menu-link">Contact</a>
