--- a/services.html
+++ b/services.html
@@ -56,9 +56,8 @@
     <header class="header header-aboutus">
       <div class="nav-header-container">
         <div class="nav-header">
-          <!-- <a href="#" class="logo"> <span>Lambton</span> Consultancy </a> -->
-          <a href="#">
-            <img src="./images/logo-new.PNG" alt="logo" class="logo" />
+          <a href="index.html">
+            <img src="./images/logo.PNG" alt="logo" class="logo" />
           </a>
 
           <!-- Navigation -->
@@ -71,7 +70,9 @@
                 <a href="./aboutus.html" class="menu-link">About</a>
               </li>
               <li>
-                <a href="./services.html" class="dropdown-link menu-link">Services</a>
+                <a href="./services.html" class="dropdown-link menu-link"
+                  >Services</a
+                >
                 <div class="dropdown-content">
                   <a href="#services" class="sublink">Our Services</a>
                   <a href="#offer" class="sublink">Offers</a>
@@ -127,7 +128,8 @@
               </div>
               <h3>Web</h3>
               <p>
-                Professional UX/UI design and implementation of websites, web portals and other solutions.
+                Professional UX/UI design and implementation of websites, web
+                portals and other solutions.
               </p>
             </div>
           </div>
@@ -138,7 +140,8 @@
               </div>
               <h3>Mobile App</h3>
               <p>
-                Full cycle of application design, integration and management services for iOS and Android.
+                Full cycle of application design, integration and management
+                services for iOS and Android.
               </p>
             </div>
           </div>
@@ -149,7 +152,8 @@
               </div>
               <h3>Database</h3>
               <p>
-                Database development, design and modelling, and database administration services.
+                Database development, design and modelling, and database
+                administration services.
               </p>
             </div>
           </div>
@@ -160,7 +164,8 @@
               </div>
               <h3>Web Services</h3>
               <p>
-                A wide range of services delivered on demand to provide easy, affordable access to applications and resources.
+                A wide range of services delivered on demand to provide easy,
+                affordable access to applications and resources.
               </p>
             </div>
           </div>
@@ -171,7 +176,8 @@
               </div>
               <h3>Analytics</h3>
               <p>
-                Our analytics services & solutions can help you review and visualize your data and unlock powerful insights.
+                Our analytics services & solutions can help you review and
+                visualize your data and unlock powerful insights.
               </p>
             </div>
           </div>
@@ -182,7 +188,8 @@
               </div>
               <h3>Security</h3>
               <p>
-                We provide Information and Cyber Security Strategy & Design services to give you a better security posture.
+                We provide Information and Cyber Security Strategy & Design
+                services to give you a better security posture.
               </p>
             </div>
           </div>
@@ -192,29 +199,31 @@
 
       <!-- What we offer section -->
       <section class="section-offer" id="offer">
-          <h3 class="title">What we offer</h3>
-        
+        <h3 class="title">What we offer</h3>
+
         <div class="container grid">
-            <div class="services-image">
-                <img src="images/services/services.PNG" alt="image"> 
-            </div>
-         
-            <div class="offer-content">
-              <h4>A range of exclusive Services &amp; Solutions</h4>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-              <ul class="offer-list">
-                <li> <span>Architecture Redesign</span></li>
-                <li> <span>Software Modernisation</span></li>
-                <li> <span>Project Management</span></li>
-                <li> <span>Remote Tech Assistance</span></li>
-                <li> <span>Cloud Services</span></li>
-                <li> <span>Auditing &amp; Assurance</span></li>
-              </ul>
-            </div>
+          <div class="services-image">
+            <img src="images/services/services.PNG" alt="image" />
+          </div>
+
+          <div class="offer-content">
+            <h4>A range of exclusive Services &amp; Solutions</h4>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            </p>
+            <ul class="offer-list">
+              <li><span>Architecture Redesign</span></li>
+              <li><span>Software Modernisation</span></li>
+              <li><span>Project Management</span></li>
+              <li><span>Remote Tech Assistance</span></li>
+              <li><span>Cloud Services</span></li>
+              <li><span>Auditing &amp; Assurance</span></li>
+            </ul>
+          </div>
         </div>
       </section>
       <!-- End of What we offer section -->
-
     </main>
     <!--	Footer section	-->
     <footer class="footer">
