--- a/contactus.html
+++ b/contactus.html
@@ -56,8 +56,8 @@
     <header class="header header-contactus">
       <div class="nav-header-container">
         <div class="nav-header">
-          <a href="#">
-            <img src="./images/logo-new.PNG" alt="logo" class="logo" />
+          <a href="index.html">
+            <img src="./images/logo.PNG" alt="logo" class="logo" />
           </a>
 
           <!-- Navigation -->
@@ -68,7 +68,9 @@
               </li>
 
               <li>
-                <a href="./aboutus.html" class="dropdown-link menu-link">About</a>
+                <a href="./aboutus.html" class="dropdown-link menu-link"
+                  >About</a
+                >
                 <div class="dropdown-content">
                   <a href="#team" class="sublink">Our Team</a>
                   <a href="#choose" class="sublink">Choose Us</a>
