--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
     <header class="header">
       <div class="nav-header-container">
         <div class="nav-header">
-          <a href="#">
-            <img src="./images/logo-new.PNG" alt="logo" class="logo" />
+          <a href="index.html">
+            <img src="./images/logo.PNG" alt="logo" class="logo" />
           </a>
 
           <!-- Navigation -->
