sorted images to folders

--- a/aboutus.html
+++ b/aboutus.html
@@ -53,7 +53,7 @@
 
   <body>
     <!-- Header-->
-    <header class="header header-aboutus">
+    <header class="header">
       <div class="nav-header-container">
         <div class="nav-header">
           <a href="index.html">
@@ -84,10 +84,10 @@
                 <a href="./projects.html" class="menu-link">Projects</a>
               </li>
               <li>
-                <a href="./contactus.html" class="menu-link">Contact</a>
+                <a href="./careers.html" class="menu-link">Careers</a>
               </li>
               <li>
-                <a href="./careers.html" class="menu-link">Careers</a>
+                <a href="./contactus.html" class="menu-link">Contact</a>
               </li>
             </ul>
           </nav>
@@ -108,12 +108,6 @@
             <div class="hero-text2">
               <span>About Us</span>
             </div>
-            <!-- <div class="hero-text2">We <span class="typed"></span></div> -->
-            <!-- <a
-              href="#programs"
-              class="btn btn--full btn--padding-lg margin-top--sm"
-              >Explore our work</a
-            > -->
           </div>
         </div>
       </div>
@@ -133,7 +127,7 @@
         >
           <div class="choose-us-container">
             <img
-              src="./images/choose-us.png"
+              src="./images/aboutus/choose-us.png"
               alt="choose-us-image"
               class="choose-us-img"
             />
