--- a/index.html
+++ b/index.html
@@ -81,11 +81,11 @@
               >
               </li>
               <li>
-                <a href="./contactus.html" class="menu-link">Contact</a>
-              </li>
-              <li>
                 <a href="./careers.html" class="menu-link">Careers</a>
               </li>
+              <li>
+                <a href="./contactus.html" class="menu-link">Contact</a>
+              </li>      
             </ul>
           </nav>
 
@@ -319,7 +319,7 @@
     <section class="testimonials desktop">
       <div class="grid grid--2-cols pt-4">
         <div class="card center margin-top--xl">
-          <img class="testi_images" src="./images/vector_01.jpg" alt="testimonialimage" />
+          <img class="testi_images" src="./images/home/client1.jpg" alt="testimonialimage" />
           <p class="testi--text">
             Lorem ipsum dolor sit amet consectetur adipisicing elit.
             Perspiciatis in, qui ratione ducimus voluptate veniam eaque itaque
@@ -331,7 +331,7 @@
           </p>
         </div>
         <div class="card center margin-top--xl">
-          <img class="testi_images" src="./images/vector_02.jpg" alt="testimonialimage" />
+          <img class="testi_images" src="./images/home/client2.jpg" alt="testimonialimage" />
           <p class="testi--text">
             Lorem ipsum dolor sit amet consectetur adipisicing elit.
             Perspiciatis in, qui ratione ducimus voluptate veniam eaque itaque
@@ -343,7 +343,7 @@
           </p>
         </div>
         <div class="card center margin-top--xl">
-          <img class="testi_images" src="./images/vector_03.jpg" alt="testimonialimage" />
+          <img class="testi_images" src="./images/home/client3.jpg" alt="testimonialimage" />
           <p class="testi--text">
             Lorem ipsum dolor sit amet consectetur adipisicing elit.
             Perspiciatis in, qui ratione ducimus voluptate veniam eaque itaque
@@ -355,7 +355,7 @@
           </p>
         </div>
         <div class="card center margin-top--xl">
-          <img class="testi_images" src="./images/vector_04.jpg" alt="testimonialimage" />
+          <img class="testi_images" src="./images/home/client4.jpg" alt="testimonialimage" />
           <p class="testi--text">
             Lorem ipsum dolor sit amet consectetur adipisicing elit.
             Perspiciatis in, qui ratione ducimus voluptate veniam eaque itaque
@@ -375,7 +375,7 @@
       <div class="grid--sm slideshow-container pt-4">
         <!-- Full-width images with number and caption text -->
         <div class="card mySlides margin-top--sm center fade">
-          <img class="testi_images" src="./images/vector_04.jpg" alt="testimonialimage" />
+          <img class="testi_images" src="./images/home/client1.jpg" alt="testimonialimage" />
           <p class="testi--text">
             Lorem ipsum dolor sit amet consectetur adipisicing elit.
             Perspiciatis in, qui ratione ducimus voluptate veniam eaque itaque
@@ -388,7 +388,7 @@
         </div>
 
         <div class="card mySlides margin-top--sm center fade">
-          <img class="testi_images" src="./images/vector_03.jpg" alt="testimonialimage" />
+          <img class="testi_images" src="./images/home/client2.jpg" alt="testimonialimage" />
           <p class="testi--text">
             Lorem ipsum dolor sit amet consectetur adipisicing elit.
             Perspiciatis in, qui ratione ducimus voluptate veniam eaque itaque
@@ -401,7 +401,7 @@
         </div>
 
         <div class="card mySlides margin-top--sm center fade">
-          <img class="testi_images" src="./images/vector_02.jpg" alt="testimonialimage" />
+          <img class="testi_images" src="./images/home/client3.jpg" alt="testimonialimage" />
           <p class="testi--text">
             Lorem ipsum dolor sit amet consectetur adipisicing elit.
             Perspiciatis in, qui ratione ducimus voluptate veniam eaque itaque
@@ -413,7 +413,7 @@
           </p>
         </div>
         <div class="card mySlides margin-top--sm center fade">
-          <img class="testi_images" src="./images/vector_01.jpg" alt="testimonialimage" />
+          <img class="testi_images" src="./images/home/client4.jpg" alt="testimonialimage" />
           <p class="testi--text">
             Lorem ipsum dolor sit amet consectetur adipisicing elit.
             Perspiciatis in, qui ratione ducimus voluptate veniam eaque itaque
