--- a/index.html
+++ b/index.html
@@ -314,57 +314,50 @@
       </section>
     </div>
     <!-- projects--mobile -->
+
     <!-- testimonials -->
     <div id="testimonials">
     <section class="testimonials desktop">
       <div class="grid grid--2-cols pt-4">
         <div class="card center margin-top--xl">
           <img class="testi_images" src="./images/home/client1.jpg" alt="testimonialimage" />
+          <blockquote>
           <p class="testi--text">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Perspiciatis in, qui ratione ducimus voluptate veniam eaque itaque
-            dolorum placeat assumenda inventore architecto quos beatae aliquam
-            deleniti totam illum nulla ipsam.Lorem ipsum dolor sit amet
-            consectetur adipisicing elit. Perspiciatis in, qui ratione ducimus
-            voluptate veniam eaque itaque dolorum placeat assumenda inventore
-            architecto quos beatae aliquam deleniti totam illum nulla ipsam.
+            Definitely worth the investment. Amazing website is exactly what our business has been lacking.
           </p>
+          </blockquote>
+          <p class="testi_name">Erlin</p>
+          <p class="testi_title">Founder at Webnet</p>
         </div>
         <div class="card center margin-top--xl">
           <img class="testi_images" src="./images/home/client2.jpg" alt="testimonialimage" />
+          <blockquote>
           <p class="testi--text">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Perspiciatis in, qui ratione ducimus voluptate veniam eaque itaque
-            dolorum placeat assumenda inventore architecto quos beatae aliquam
-            deleniti totam illum nulla ipsam.Lorem ipsum dolor sit amet
-            consectetur adipisicing elit. Perspiciatis in, qui ratione ducimus
-            voluptate veniam eaque itaque dolorum placeat assumenda inventore
-            architecto quos beatae aliquam deleniti totam illum nulla ipsam.
+            I am really satisfied with my mobile app. I wish I would have thought of it first. It's incredible.
           </p>
+          </blockquote>
+          <p class="testi_name">Damien</p>
+          <p class="testi_title">Founder at BigChunk</p>
         </div>
         <div class="card center margin-top--xl">
           <img class="testi_images" src="./images/home/client3.jpg" alt="testimonialimage" />
+          <blockquote>
           <p class="testi--text">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Perspiciatis in, qui ratione ducimus voluptate veniam eaque itaque
-            dolorum placeat assumenda inventore architecto quos beatae aliquam
-            deleniti totam illum nulla ipsam.Lorem ipsum dolor sit amet
-            consectetur adipisicing elit. Perspiciatis in, qui ratione ducimus
-            voluptate veniam eaque itaque dolorum placeat assumenda inventore
-            architecto quos beatae aliquam deleniti totam illum nulla ipsam.
+            Web services has certainly helped our business. It's really wonderful service by Lambton.
           </p>
+         </blockquote>
+          <p class="testi_name">Shawn</p>
+          <p class="testi_title">CEO at Primatic</p>
         </div>
         <div class="card center margin-top--xl">
           <img class="testi_images" src="./images/home/client4.jpg" alt="testimonialimage" />
+          <blockquote>
           <p class="testi--text">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Perspiciatis in, qui ratione ducimus voluptate veniam eaque itaque
-            dolorum placeat assumenda inventore architecto quos beatae aliquam
-            deleniti totam illum nulla ipsam.Lorem ipsum dolor sit amet
-            consectetur adipisicing elit. Perspiciatis in, qui ratione ducimus
-            voluptate veniam eaque itaque dolorum placeat assumenda inventore
-            architecto quos beatae aliquam deleniti totam illum nulla ipsam.
+            I have gotten at least 50 times the value from analytics services provided by Lambton.
           </p>
+          </blockquote>
+          <p class="testi_name">Layla</p>
+          <p class="testi_title">CEO at Multive</p>
         </div>
       </div>
     </section>
@@ -376,53 +369,45 @@
         <!-- Full-width images with number and caption text -->
         <div class="card mySlides margin-top--sm center fade">
           <img class="testi_images" src="./images/home/client1.jpg" alt="testimonialimage" />
+          <blockquote>
           <p class="testi--text">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Perspiciatis in, qui ratione ducimus voluptate veniam eaque itaque
-            dolorum placeat assumenda inventore architecto quos beatae aliquam
-            deleniti totam illum nulla ipsam.Lorem ipsum dolor sit amet
-            consectetur adipisicing elit. Perspiciatis in, qui ratione ducimus
-            voluptate veniam eaque itaque dolorum placeat assumenda inventore
-            architecto quos beatae aliquam deleniti totam illum nulla ipsam.
+            Definitely worth the investment. Amazing website is exactly what our business has been lacking.
           </p>
+          </blockquote>
+          <p class="testi_name">Erlin</p>
+          <p class="testi_title">Founder at Webnet</p>
         </div>
 
         <div class="card mySlides margin-top--sm center fade">
           <img class="testi_images" src="./images/home/client2.jpg" alt="testimonialimage" />
+          <blockquote>
           <p class="testi--text">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Perspiciatis in, qui ratione ducimus voluptate veniam eaque itaque
-            dolorum placeat assumenda inventore architecto quos beatae aliquam
-            deleniti totam illum nulla ipsam.Lorem ipsum dolor sit amet
-            consectetur adipisicing elit. Perspiciatis in, qui ratione ducimus
-            voluptate veniam eaque itaque dolorum placeat assumenda inventore
-            architecto quos beatae aliquam deleniti totam illum nulla ipsam.
+            I am really satisfied with my mobile app. I wish I would have thought of it first. It's incredible.
           </p>
+          </blockquote>
+          <p class="testi_name">Damien</p>
+          <p class="testi_title">Founder at BigChunk</p>
         </div>
 
         <div class="card mySlides margin-top--sm center fade">
           <img class="testi_images" src="./images/home/client3.jpg" alt="testimonialimage" />
+          <blockquote>
           <p class="testi--text">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Perspiciatis in, qui ratione ducimus voluptate veniam eaque itaque
-            dolorum placeat assumenda inventore architecto quos beatae aliquam
-            deleniti totam illum nulla ipsam.Lorem ipsum dolor sit amet
-            consectetur adipisicing elit. Perspiciatis in, qui ratione ducimus
-            voluptate veniam eaque itaque dolorum placeat assumenda inventore
-            architecto quos beatae aliquam deleniti totam illum nulla ipsam.
+            Web services has certainly helped our business. It's really wonderful service by Lambton.
           </p>
+          </blockquote>
+          <p class="testi_name">Shawn</p>
+          <p class="testi_title">CEO at Primatic</p>
         </div>
         <div class="card mySlides margin-top--sm center fade">
           <img class="testi_images" src="./images/home/client4.jpg" alt="testimonialimage" />
+          <blockquote>
           <p class="testi--text">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Perspiciatis in, qui ratione ducimus voluptate veniam eaque itaque
-            dolorum placeat assumenda inventore architecto quos beatae aliquam
-            deleniti totam illum nulla ipsam.Lorem ipsum dolor sit amet
-            consectetur adipisicing elit. Perspiciatis in, qui ratione ducimus
-            voluptate veniam eaque itaque dolorum placeat assumenda inventore
-            architecto quos beatae aliquam deleniti totam illum nulla ipsam.
+            I have gotten at least 50 times the value from analytics services provided by Lambton.
           </p>
+          </blockquote>
+          <p class="testi_name">Layla</p>
+          <p class="testi_title">CEO at Multive</p>
         </div>
 
         <!-- Next and previous buttons -->
