added more projects and some more refinements

--- a/careers.html
+++ b/careers.html
@@ -95,7 +95,7 @@
 
       <!-- Hero -->
       <div class="hero-box">
-        <div class="hero grid--no-column-gap">
+        <div class="hero hero-60vh grid--no-column-gap">
           <div class="hero-text-box hero-text-box--pages">
             <div class="hero-text2">Home -></div>
             <div class="hero-text2">
@@ -130,7 +130,7 @@
                 <li class="author">
                   <a href="#">Moneris Toronto, ON On-site</a>
                 </li>
-                <li class="date">4 days ago, 1st April 2022</li>
+                <li class="date">4 days ago</li>
                 <li class="tags">
                   <ul>
                     <!-- <li><a href="#"></a></li> -->
@@ -167,7 +167,7 @@
               <div class="photo photo-2"></div>
               <ul class="details">
                 <li class="author"><a href="#"> Amazon Toronto, ON </a></li>
-                <li class="date">6 days ago, 30th March 2022</li>
+                <li class="date">6 days ago</li>
                 <li class="tags">
                   <ul>
                     <li><a href="#">C++ or C#</a></li>
@@ -207,7 +207,7 @@
                 <li class="author">
                   <a href="#">Ceridian Toronto, ON Remote</a>
                 </li>
-                <li class="date">3 days ago, 2nd April 2022</li>
+                <li class="date">3 days ago</li>
                 <li class="tags">
                   <ul>
                     <li><a href="#">Learn</a></li>
@@ -246,7 +246,7 @@
                 <li class="author">
                   <a href="#"> TCS Toronto, ON On-site </a>
                 </li>
-                <li class="date">1 week ago, 29th March 2022</li>
+                <li class="date">1 week ago</li>
                 <li class="tags">
                   <ul>
                     <li><a href="#">Learn</a></li>
