--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
               <div class="hero-text2">We <span class="typed"></span></div>
               <a
                 href="./projects.html"
-                class="btn btn--full btn--padding-lg margin-top--sm"
+                class="btn btn--full btn--padding-lg margin-top--sm margin-auto"
                 >Explore our work</a
               >
             </div>
@@ -206,7 +206,7 @@
     <!-- projects -->
     <div id="project">
       <section class="projects desktop">
-        <h2 class="center pt-2 pb-2 main-color">Our Work</h2>
+        <h2 class="center pt-2 pb-3 main-color">Our Work</h2>
         <div class="grid grid--2-cols">
           <div class="card center">
             <img class="proj_image" src="./images/projects/proj9.jpg" alt="projectimage" />
@@ -246,14 +246,14 @@
           </div>
           </div>
           <h3 class="center pb-2">
-            <a href="./projects.html" class="main-color">Explore Projects &nbsp;<i class="fa fa-angle-right" aria-hidden="true"></i></a>
+            <a href="./projects.html" class="main-color btn btn--full btn--sm btn--padding-sm">Explore Projects &nbsp;<i class="fa fa-angle-right" aria-hidden="true"></i></a>
           </h3>
         </section>
         
       <!-- projects -->
       <!-- projects--mobile -->
       <section class="projects mobile">
-          <h2 class="center pt-2 pb-2 main-color">Our Work</h2>
+          <h2 class="center pt-2 pb-3 main-color">Our Work</h2>
         <div class="grid--sm slideshow-container ">
           <!-- Full-width images with number and caption text -->
           <div class="card projmySlides margin-top--sm center fade">
@@ -309,7 +309,7 @@
           <span class="dot dot-projmySlides" onclick="currentSlide(4,'projmySlides')"></span>
         </div>
         <h3 class="center margin-top--sm">
-          <a href="#" class="main-color">Explore Projects&nbsp <i class="fa fa-angle-right" aria-hidden="true"></i></a>
+          <a href="#" class="main-color btn btn--full btn--sm btn--padding-sm">Explore Projects &nbsp; <i class="fa fa-angle-right" aria-hidden="true"></i></a>
         </h3>
       </section>
     </div>
