--- a/projects.html
+++ b/projects.html
@@ -97,18 +97,12 @@
 
       <!-- Hero -->
       <div class="hero-box">
-        <div class="hero grid--no-column-gap">
+        <div class="hero hero-60vh grid--no-column-gap">
           <div class="hero-text-box hero-text-box--pages">
             <div class="hero-text2">Home -></div>
             <div class="hero-text2">
               <span>Projects</span>
             </div>
-            <!-- <div class="hero-text2">We <span class="typed"></span></div> -->
-            <!-- <a
-              href="#programs"
-              class="btn btn--full btn--padding-lg margin-top--sm"
-              >Explore our work</a
-            > -->
           </div>
         </div>
       </div>
@@ -124,14 +118,13 @@
               <div class="proj-card-front">
                 <img
                   src="images/projects/proj3.jpg"
-                  class="wt-100"
+                  class="wt-100 ht-60"
                   alt="Avatar"
                 />
                 <h3>Shortly</h3>
                 <p>
                   We designed and developed Shortly website for mobile, laptop
-                  and desktop versions. Really cool designs created by our
-                  awesome team of UI/UX.
+                  and desktop versions. Really cool designs!
                 </p>
               </div>
               <div class="proj-card-back">
@@ -146,14 +139,13 @@
               <div class="proj-card-front">
                 <img
                   src="images/projects/proj4.jpg"
-                  class="wt-100"
+                  class="wt-100 ht-60"
                   alt="Avatar"
                 />
                 <h3>Manage</h3>
                 <p>
                   This application has vibrant colors and really fantastic icons
-                  which attracts their clients and users and tempted them to
-                  understand more about their product.
+                  which attracts their clients and users.
                 </p>
               </div>
               <div class="proj-card-back">
@@ -168,14 +160,13 @@
               <div class="proj-card-front">
                 <img
                   src="images/projects/proj5.jpg"
-                  class="wt-100"
+                  class="wt-100 ht-60"
                   alt="Avatar"
                 />
                 <h3>Bookmark</h3>
                 <p>
-                  This application helps the clients to bookmark their webpages
-                  in a single click and provide much more features like single
-                  click searching and much more.
+                  This app helps the clients to bookmark their webpages in a
+                  single click and provide much more features.
                 </p>
               </div>
               <div class="proj-card-back">
@@ -190,14 +181,13 @@
               <div class="proj-card-front">
                 <img
                   src="images/projects/proj6.jpg"
-                  class="wt-100"
+                  class="wt-100 ht-60"
                   alt="Avatar"
                 />
                 <h3>Job Hunt</h3>
                 <p>
-                  One click to apply for jobs. We've integrated with other
-                  popular job crawlers which provide recommendations to the
-                  premium subscribers. Isn't that cool ?
+                  One click to apply for jobs. We've integrated with popular job
+                  crawlers which provide recommendations.
                 </p>
               </div>
               <div class="proj-card-back">
@@ -212,14 +202,13 @@
               <div class="proj-card-front">
                 <img
                   src="./images/projects/proj1.png"
-                  class="wt-100"
+                  class="wt-100 ht-60"
                   alt="Avatar"
                 />
                 <h3>Eventsite</h3>
                 <p>
                   Heaven for the people who loves to join meetups and events on
-                  weekends. Newsletter and push notifications feature enabled to
-                  provide latest updates.
+                  weekends. Lots of other features enabled.
                 </p>
               </div>
               <div class="proj-card-back">
@@ -234,14 +223,13 @@
               <div class="proj-card-front">
                 <img
                   src="images/projects/proj7.jpg"
-                  class="wt-100"
+                  class="wt-100 ht-60"
                   alt="Avatar"
                 />
                 <h3>MyTeam</h3>
                 <p>
                   Talent hunt website which provides really cool features. Our
-                  team have done amazing job in designing and developing this
-                  website.
+                  team has done amazing job.
                 </p>
               </div>
               <div class="proj-card-back">
@@ -256,14 +244,13 @@
               <div class="proj-card-front">
                 <img
                   src="images/projects/proj8.jpg"
-                  class="wt-100"
+                  class="wt-100 ht-60"
                   alt="Avatar"
                 />
                 <h3>Portfolio</h3>
                 <p>
                   We help businessmen and professionals to create their
-                  portfolio websites. Nicely done by our creative team by
-                  finishing this project within 2 weeks.
+                  portfolio websites and helps in succeeding.
                 </p>
               </div>
               <div class="proj-card-back">
@@ -278,14 +265,97 @@
               <div class="proj-card-front">
                 <img
                   src="images/projects/proj9.jpg"
-                  class="wt-100"
+                  class="wt-100 ht-60"
                   alt="Avatar"
                 />
                 <h3>AI Power</h3>
                 <p>
                   AI solution to provide data and figures to ensure that project
-                  gets delivered on time. We've created really cool gradients
-                  and icons which loves their clients.
+                  gets delivered on time. Really cool gradients used.
+                </p>
+              </div>
+              <div class="proj-card-back">
+                <a href="#" class="btn btn--full btn--padding-sm">
+                  Open <i class="fa-solid fa-up-right-from-square"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="proj-card">
+            <div class="proj-card-inner">
+              <div class="proj-card-front">
+                <img
+                  src="images/projects/proj10.PNG"
+                  class="wt-100 ht-60"
+                  alt="Avatar"
+                />
+                <h3>UI/UX Geeks</h3>
+                <p>
+                  Created amazing website which attacts customers to explore
+                  their work and services they offer.
+                </p>
+              </div>
+              <div class="proj-card-back">
+                <a href="#" class="btn btn--full btn--padding-sm">
+                  Open <i class="fa-solid fa-up-right-from-square"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="proj-card">
+            <div class="proj-card-inner">
+              <div class="proj-card-front">
+                <img
+                  src="images/projects/proj11.PNG"
+                  class="wt-100 ht-60"
+                  alt="Avatar"
+                />
+                <h3>Spicy Mix</h3>
+                <p>
+                  Helped Spicy mix in creating a solution to sell and advertise
+                  their meals with online booking and payment.
+                </p>
+              </div>
+              <div class="proj-card-back">
+                <a href="#" class="btn btn--full btn--padding-sm">
+                  Open <i class="fa-solid fa-up-right-from-square"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="proj-card">
+            <div class="proj-card-inner">
+              <div class="proj-card-front">
+                <img
+                  src="images/projects/proj12.PNG"
+                  class="wt-100 ht-60"
+                  alt="Avatar"
+                />
+                <h3>EasyPayment</h3>
+                <p>
+                  Provided an analytics platform to capture all the transactions
+                  going through their system. We created amazing dashboards.
+                </p>
+              </div>
+              <div class="proj-card-back">
+                <a href="#" class="btn btn--full btn--padding-sm">
+                  Open <i class="fa-solid fa-up-right-from-square"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="proj-card">
+            <div class="proj-card-inner">
+              <div class="proj-card-front">
+                <img
+                  src="images/projects/proj13.PNG"
+                  class="wt-100 ht-60"
+                  alt="Avatar"
+                />
+                <h3>VacationFever</h3>
+                <p>
+                  Created cool website to view vacation packages, book and pay
+                  using integrated payments and eye-catchy effects.
                 </p>
               </div>
               <div class="proj-card-back">
