--- a/services.html
+++ b/services.html
@@ -100,7 +100,7 @@
 
       <!-- Hero -->
       <div class="hero-box">
-        <div class="hero grid--no-column-gap">
+        <div class="hero hero-60vh grid--no-column-gap">
           <div class="hero-text-box hero-text-box--pages">
             <div class="hero-text2">Home -></div>
             <div class="hero-text2">
